syntax = "proto3";

package Orderrpc;

service orderer {
    rpc AddDS(AddDSReq) returns (AddDSResp);
    rpc DelDS(DelDSReq) returns (DelDSResp);
    rpc UpdateDS(UpdateDSReq) returns (UpdateDSResp);
    rpc SelectAllDS(SelectAllDSReq) returns (SelectAllDSResp);
    rpc SelectByIDDS(SelectByIDDSReq) returns (SelectByIDDSResp);
    rpc SelectByCreatedAtDS(SelectByCreatedAtDSReq) returns (SelectByCreatedAtDSResp);
}

message AddDSReq {
    string seller_name = 1;
    string cus_name = 2;
    bytes good_list = 3;
    bytes good_list_amount = 4;
    int64 total_money = 5;
}

message AddDSResp {
    bool Success = 1;
}

message DelDSReq {
    int64 id = 1;
}

message DelDSResp {
    bool Success = 1;
}

message UpdateDSReq {
    int64 id = 1;
    string seller_name = 2;
    string cus_name = 3;
    bytes good_list = 4;
    bytes good_list_amount = 5;
    int64 total_money = 6;
}

message UpdateDSResp {
    bool Success = 1;
}

message SelectAllDSReq {
}

message SelectAllDSResp {
    bytes Payload = 1;
}

message SelectByIDDSReq {
    int64 id = 1;
}

message SelectByIDDSResp {
    bytes Payload = 1;
}

message SelectByCreatedAtDSReq {
    int64 from_time = 1;
    int64 to_time = 2;
}

message SelectByCreatedAtDSResp {
    bytes Payload = 1;
}